--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       - MYSQL_ROOT_PASSWORD_FILE=/run/secrets/mysql_root_password
       - MYSQL_PASSWORD_FILE=/run/secrets/mysql_password
       - LORIS_ADMIN_PASSWORD_FILE=/run/secrets/loris_admin_password
+      - LORIS_HOST=localhost
     depends_on:
       db:
         condition: service_healthy
