--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ LORIS_VERSION=25.0.2
 MYSQL_USER=loris
 MYSQL_DATABASE=LorisDB
 LORIS_ADMIN_USER=lorisadmin
+COUCHDB_USER=loris
+COUCHDB_PASSWORD=temp
