Fix db user password installation issue and start entrypoint installation script

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 LORIS_VERSION=25.0.2
 MYSQL_USER=loris
 MYSQL_DATABASE=LorisDB
-LORIS_ADMIN_USER=lorisadmin
+LORIS_ADMIN_USER=admin
 LORIS_MRI_VERSION=24.1.16
+LORIS_EMAIL=lorisadmin@childmind.org
