--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ MYSQL_DATABASE=LorisDB
 LORIS_ADMIN_USER=admin
 LORIS_MRI_VERSION=26.0.0
 LORIS_EMAIL=lorisadmin@childmind.org
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+LORIS_LOCAL_INST_DIR=/Users/gabriel.schubiner/Documents/philani-code/data/linst
