remove vscode workspace

--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ LORIS_MRI_VERSION=26.0.0
 LORIS_EMAIL=lorisadmin@childmind.org
 SMTP_HOST=smtp.example.com
 SMTP_PORT=587
-LORIS_LOCAL_INST_DIR=/Users/gabriel.schubiner/Documents/philani-code/data/linst
+LORIS_LOCAL_INST_DIR=
