Add CouchDB support to allow for use of old DQT

--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ LORIS_EMAIL=lorisadmin@childmind.org
 SMTP_HOST=smtp.example.com
 SMTP_PORT=587
 #LORIS_LOCAL_INST_DIR=<path to local instance directory>
+#COUCH_PASSWORD=<PASSWORD>
+COUCH_USERNAME=admin
