Add CouchDB replication to loris start-up

--- a/docker-compose.couch.yml
+++ b/docker-compose.couch.yml
@@ -12,6 +12,7 @@ services:
       - COUCH_HOSTNAME=couch
       - COUCH_PORT=5984
       - COUCH_DATABASE=loris
+      - CREATE_COUCH=True
 
 configs:
   couch_config:
