Update PHP configuration values to increase post size for DQT, add sql import for append to db tables and config value import.

--- a/.env
+++ b/.env
@@ -11,3 +11,5 @@ SMTP_PORT=587
 #LORIS_LOCAL_INST_DIR=<path to local instance directory>
 #COUCH_PASSWORD=<PASSWORD>
 COUCH_USERNAME=admin
+LORIS_CONFIG_SETTINGS_DIR=./config_settings
+LORIS_DB_IMPORT_DIR=./db_import
